# scc22-tech-stack

./: .gitignore  .install-aocc_scalapack.sh.swp  0001-modify-io500-script-to-write-and-read-from-scratch-d.patch  2mclammps.cmake  README.md  add-all-users-with-ids.sh  add-all-users.sh  add-user.sh  amdgpu-install_5.3.50300-1_all.deb  chef-install.sh  compile-phasta.sh  fftwlammps.cmake  hostfile-craig-to-evans.txt  hostlist-atob.txt  hostlist-atobc.txt  hostlist-atoc.txt  hpl-compile.sh  install-aocc.sh  install-aocc_scalapack.sh  install-cmake.sh  install-gcc-mpi.sh  install-heffte-deps.sh  install-liquidctl.sh  install-mpi-benchmarks.sh  install-mpi.sh  install-roce-mpi.sh  install-roce-mpi.sh.bak  install-rocm.sh  install-singularity.sh  install-ucx.sh  io500-compile-expanse.sh  io500-compile.sh  ipmicfg  lammps-cmake-atomic.sh  lammps-cmake-fftw.sh  lammps-cmake-fftw2.sh  lammps-cmake-fmath.sh  lammps-cmake-hwloc.sh  lammps-cmake-index.sh  lammps-cmake-opt.sh  (+28 more)
docs/: README.md  beegfs.md  cluster-node-routing.md  cpua-config.md  craig-config.md  evans-config.md  general-config.md  gpu-config.md  neil-config.md  raid-test.md  remote-desktop.md  rpi-config.md
high-temp-auto-shutdown/: Cargo.toml  deploy.sh  high-temp-auto-shutdown.service
high-temp-auto-shutdown/src/: main.rs
hpcg-nvidia/: hpcg-nvidia.sb
monitoring/: .env.dist  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  export_metris_from_this_machine.sh
phasta-scripts/: AirfoilDemo.tar  README.md  build-phasta.sh  chef-install.sh  (+10 more)
power-alert/: Cargo.toml
power-alert/src/: main.rs
(+41 files in other folders)
