[package]
name = "high-temp-auto-shutdown"
version = "0.1.1"
authors = ["Yuchen Jing <y5jing@ucsd.edu>"]
description = "Automatically shutdown the machine when temperature is too high"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.9", features = ["derive"] }
