[package]
name = "power-alert"
authors = ["Yuchen Jing <y5jing@ucsd.edu>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
serde = { version = "1.0.147", features = ["derive"] }
ureq = { version = "2.5.0", features = ["json"] }
